fix: align tables left instead of center

--- a/assets/supcik.css
+++ b/assets/supcik.css
@@ -33,3 +33,7 @@ img {
     border: none;
     box-shadow: none;
 }
+
+.markdown td, .markdown th {
+    text-align: left;
+}
